--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="card">
         <div class="imgBx">
-          <img src="running_shoes_PNG5816 (1).png" />
+          <img src="running_shoes_PNG5816 (1).png" alt="image" />
         </div>
         <div class="contentBx">
           <h2>Nike shoes</h2>
